--- a/auth/package.json
+++ b/auth/package.json
@@ -11,10 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.15",
+    "@types/node": "^18.11.17",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.14.2",
-    "ts-node-dev": "^2.0.0",
+    "mongoose": "^6.8.1",
+    "ts-node-dev": "^2.0.0"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
 }
