- user model added - signup save user email and password completed - Bad request error added

--- a/auth/package.json
+++ b/auth/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.15",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.17",
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.14.2",
