--- a/auth/package.json
+++ b/auth/package.json
@@ -11,13 +11,17 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.15",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.17",
     "bcrypt": "^5.1.0",
+    "cookie-session": "^2.0.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.14.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.1",
     "ts-node-dev": "^2.0.0"
   },
